--- a/style.css
+++ b/style.css
@@ -5,6 +5,14 @@
 
 canvas {
     background: #eee;
+    padding: 0;
+    margin: auto;
     display: block;
-    margin: 0 auto;
+    width: 960px;
+    height: 640px;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
